terraform/02_network.tf
# trivy:ignore:AVD-AWS-0178[OK_for_thesis] VPC Flow logs are not needed for this temporary project.
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "${var.project_name}-vpc"
    Role = "network"
  }
}

# trivy:ignore:AVD-AWS-0164[OK_for_thesis] Public IPs are required for direct access to instances for this project.
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true                 # Kluczowe, aby instancje miały publiczne IP
  availability_zone       = "${var.aws_region}a" # Używamy jednej strefy dla minimalnych opóźnień

  tags = {
    Name = "${var.project_name}-public-subnet"
    Role = "network"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "${var.project_name}-igw"
    Role = "network"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "${var.project_name}-public-rt"
    Role = "network"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
